@@ -34,7 +34,17 @@ import os.path
 
 import qt
 
-#sys.path.insert( 0, os.path.dirname(__file__) )
+# Allow veusz to be run even if not installed into PYTHONPATH
+try:
+    import veusz
+except ImportError:
+    # load in the veusz module, but change its path to
+    # the veusz directory, and insert it into sys.modules    
+    import __init__ as veusz
+    thisdir = os.path.dirname( os.path.abspath(__file__) )
+    veusz.__path__ = [thisdir]
+    veusz.__name__ = 'veusz'
+    sys.modules['veusz'] = veusz
 
 from veusz.windows.simplewindow import SimpleWindow
 import veusz.document as document
