@@ -1,5 +1,6 @@
 * 2006-06-16 Jeremy Sanders <jeremy@jeremysanders.net.
   - Fixed Veusz to be able to run without being installed
+  - Likewise change veusz_listen.py
 	
 * 2006-06-15 Jeremy Sanders <jeremy@jeremysanders.net>
   - Fix mix up of x and y in function plotting clipping
